Bug 353747 - Schema button implements a pop-up menu, but menu only opens for click-and-hold
Summary: Schema button implements a pop-up menu, but menu only opens for click-and-hold
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 16.04.1
Platform: Mint (Ubuntu based) Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL: https://youtu.be/1QENJfiOkyI
Keywords: usability
Depends on:
Blocks:
 
Reported: 2015-10-10 07:50 UTC by Standa
Modified: 2018-06-15 23:29 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.48
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Standa 2015-10-10 07:50:08 UTC
Icon from toolbar opens only when holding mouse click for short period of time. When I click shortly (normal click), the menu does not show.

Reproducible: Always

Steps to Reproduce:
1. Add schemes icon to toolbar
2. Click it
3.

Actual Results:  
When clicked it does not show/open.

Expected Results:  
Show/open scheme menu from the toolbar icon when clicking normal (no click holding for period of time)
Comment 1 Buovjaga 2016-06-27 07:37:43 UTC
Confirmed.

Arch Linux 64-bit
Kate 16.04.2
KDE Frameworks 5.23.0
Qt 5.7
xcb wm
Comment 2 Nikolaos Kakouros 2017-02-16 01:33:00 UTC
Still valid on kate 16.12.2. Seems like the button has an empty (or non-obvious) action assigned to it. When you click it fast this action gets triggered but nothing happens. If you long click on it then it shows the menu to select secondary items.
Comment 3 Nate Graham 2018-05-21 19:23:44 UTC
We should just need to set `[schemaMenu]->setDelayed(false);`

As soon as I can figure out where to do it, I'll submit a patch...
Comment 4 Dominik Haumann 2018-06-09 09:44:38 UTC
This ia also the same for other actions such as: Tools > Indentation, Mode, Highlighting, Scripts.

There is currently a discussion about a patch to fix this here:
https://phabricator.kde.org/D13026
Comment 5 Nate Graham 2018-06-09 13:36:36 UTC
I've updated the patch to fix the other toolbar buttons that can show menus, too.
Comment 6 Nate Graham 2018-06-15 23:16:37 UTC
Git commit b099af9eb569f4c0765cc4bc1aa69adef8f97772 by Nathaniel Graham.
Committed on 15/06/2018 at 23:16.
Pushed by ngraham into branch 'master'.

Make menu-bearing toolbar buttons show their menus with normal click rather than click-and-hold

Summary:
Fixes Kate/KWrite's menu-bearing toolbar buttons so that they all show their drop-down menus immediately when clicked, instead of requiring a click-and-hold (which is the normal Qt behavior for toolbar buttons with menus).

Note: due to [[ https://bugs.kde.org/show_bug.cgi?id=344746 | a Breeze design choice ]], this patch has the effect of removing the downward-pointing arrow that lets you know that the toolbar button will open a menu. There's an open patch that changes that, though: D13064
FIXED-IN: 5.47

Test Plan: Added {nav Schema}, {nav Mode}, {nav Intentation}, {nav Bookmarks}, {nav Highlighting} and {nav Scripts} buttons to Kate's toolbar and clicked them. They all showed their drop-down menus immediately.

Reviewers: #ktexteditor, #kate, dhaumann, cullmann

Reviewed By: #ktexteditor, #kate, dhaumann

Subscribers: hpereiradacosta, kwrite-devel, kde-frameworks-devel

Tags: #kate, #frameworks

Differential Revision: https://phabricator.kde.org/D13026

M  +1    -0    src/mode/katemodemenu.h
M  +1    -0    src/schema/kateschema.h
M  +1    -0    src/script/katescriptaction.cpp
M  +1    -0    src/syntax/katehighlightmenu.h
M  +1    -0    src/utils/kateautoindent.cpp
M  +1    -0    src/utils/katebookmarks.cpp

https://commits.kde.org/ktexteditor/b099af9eb569f4c0765cc4bc1aa69adef8f97772