Make menu-bearing toolbar buttons show their menus with normal click rather than click-and-hold

Summary:
Fixes Kate/KWrite's menu-bearing toolbar buttons so that they all show their drop-down menus immediately when clicked, instead of requiring a click-and-hold (which is the normal Qt behavior for toolbar buttons with menus).

Note: due to [[ https://bugs.kde.org/show_bug.cgi?id=344746 | a Breeze design choice ]], this patch has the effect of removing the downward-pointing arrow that lets you know that the toolbar button will open a menu. There's an open patch that changes that, though: D13064

BUG: 353747
FIXED-IN: 5.47

Test Plan: Added {nav Schema}, {nav Mode}, {nav Intentation}, {nav Bookmarks}, {nav Highlighting} and {nav Scripts} buttons to Kate's toolbar and clicked them. They all showed their drop-down menus immediately.

Reviewers: #ktexteditor, #kate, dhaumann, cullmann

Reviewed By: #ktexteditor, #kate, dhaumann

Subscribers: hpereiradacosta, kwrite-devel, kde-frameworks-devel

Tags: #kate, #frameworks

Differential Revision: https://phabricator.kde.org/D13026